@@ -1,3 +1,14 @@
+2007-11-14  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Implemented a
+	  workaround for "Bug 341762 - Some TextIters should be passed by ref" as
+	  a partial fix for "Bug 341319 - Tab not working correctly". Also added a
+	  catch for infinite recursion in OnTextChanged, which additionally stops
+	  consumers from invalidating TextIters by altering the buffer in
+	  TextChanged handlers.
+	* MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs: Added a note about
+	  duplicated functionality in gtksv 1.8.
+
 2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs,
